change: changed and corrected table spacing in both transaction tables

--- a/src/sass/theme/_table.scss
+++ b/src/sass/theme/_table.scss
@@ -335,3 +335,15 @@ th {
 .table-responsive {
   margin-top: 10px;
 }
+
+//css by Aquibur Rahman Khan
+
+@media screen and (max-width: $resXXXL) {
+  .history-table{
+    max-width: 80px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
